# kraken

./: .dir-locals.el  .gitignore  LICENSE  Makefile  README.md  kraken.cabal  mk  shell.nix  stack.yaml
app/: Main.hs
src/Kraken/: API.hs  Parse.hs  Rest.hs  Types.hs  Util.hs
test/: RestSpec.hs
