name:                kraken
version:             0.1.0.0
synopsis:            TODO Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/cmahon/kraken
license:             BSD3
license-file:        LICENSE
author:              Chris Mahon
maintainer:          cnmahon@gmail.com
copyright:           Copyright (c) 2016 Chris Mahon
category:            tbc
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  default-language:    Haskell2010
  ghc-options:         -Wall -fno-warn-orphans
  hs-source-dirs:      src
  exposed-modules:     Kraken.API
                     , Kraken.Rest
                     , Kraken.Types
                     , Kraken.Util
  build-depends:       aeson
                     , base >= 4.7 && < 5
                     , base64-bytestring
                     , byteable
                     , bytestring
                     , cryptohash
                     , data-default
                     , either
                     , hashable
                     , servant
                     , servant-client
                     , text
                     , time
                     , transformers
                     , unordered-containers
  default-extensions:  DataKinds
                       DeriveGeneric
                       DeriveAnyClass
                       FlexibleInstances
                       LambdaCase
                       OverloadedStrings
                       RecordWildCards
                       ScopedTypeVariables
                       TypeOperators

executable kraken
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       base
                     , bytestring
                     , data-default
                     , kraken
                     , text
                     , transformers
  default-extensions:  OverloadedStrings

test-suite spec
  default-language:    Haskell2010
  ghc-options:         -Wall
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , kraken
                     , hspec
                     , QuickCheck
                     
source-repository head
  type:     git
  location: https://github.com/cmahon/kraken
